[package]
name = "rust-shellcode-wrapper"
version = "1.0.0"
edition = "2021"
license = "MIT"
build = "src/build.rs"

[[bin]]
name = "runner"
path = "src/runner.rs"
edition = "2021"

[[bin]]
name = "service"
path = "src/service.rs"
edition = "2021"

[build-dependencies]
hex = "0.4.3"
regex = "1.10.4"
md5 = "0.7.0"

[dependencies]
md5 = "0.7.0"
libc = "0.2.147"
windows-sys = { version = "0.52.0", features = [
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_Foundation",
  "Win32_System_Memory",
] }
windows-service = "0.7.0"

